--- a/Test.ipynb
+++ b/Test.ipynb
@@ -140,35 +140,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Can't instantiate abstract class UnifiedImageAdjustment with abstract method apply_adjustment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mInterface\u001b[39;00m \u001b[39mimport\u001b[39;00m ImageProcessingInterface\n\u001b[0;32m----> 2\u001b[0m interface \u001b[39m=\u001b[39m ImageProcessingInterface()\n\u001b[1;32m      3\u001b[0m \u001b[39m# Resize\u001b[39;00m\n\u001b[1;32m      4\u001b[0m image \u001b[39m=\u001b[39m interface\u001b[39m.\u001b[39mread_image(\u001b[39m\"\u001b[39m\u001b[39m/home/karanvora/Documents/New York University/Classes/Semester 2/Software Engineering for Scientific Computing/Final Project/Unit_Test/Sample_Images/test_image.bmp\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Documents/New York University/Classes/Semester 2/Software Engineering for Scientific Computing/Final Project/Interface.py:10\u001b[0m, in \u001b[0;36mImageProcessingInterface.__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mimage_handler \u001b[39m=\u001b[39m UnifiedImageHandler()\n\u001b[1;32m      9\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mimage_transformer \u001b[39m=\u001b[39m UnifiedImageTransformer()\n\u001b[0;32m---> 10\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mimage_adjustment \u001b[39m=\u001b[39m UnifiedImageAdjustment()\n",
+      "\u001b[0;31mTypeError\u001b[0m: Can't instantiate abstract class UnifiedImageAdjustment with abstract method apply_adjustment"
+     ]
+    }
+   ],
    "source": [
+    "from Interface import ImageProcessingInterface\n",
+    "interface = ImageProcessingInterface()\n",
     "# Resize\n",
-    "image = interface.read_image(\"input_image.jpg\")\n",
+    "image = interface.read_image(\"/home/karanvora/Documents/New York University/Classes/Semester 2/Software Engineering for Scientific Computing/Final Project/Unit_Test/Sample_Images/test_image.bmp\")\n",
     "resized_image = interface.apply_transform(\"resize\", image, size=(200, 200))\n",
     "interface.write_image(\"resized_image.jpg\", resized_image)\n",
     "\n",
     "# Rotate\n",
-    "image = interface.read_image(\"input_image.jpg\")\n",
+    "image = interface.read_image(\"/home/karanvora/Documents/New York University/Classes/Semester 2/Software Engineering for Scientific Computing/Final Project/Unit_Test/Sample_Images/test_image.bmp\")\n",
     "rotated_image = interface.apply_transform(\"rotate\", image, angle=90)\n",
     "interface.write_image(\"rotated_image.jpg\", rotated_image)\n",
     "\n",
     "# Flip\n",
-    "image = interface.read_image(\"input_image.jpg\")\n",
+    "image = interface.read_image(\"/home/karanvora/Documents/New York University/Classes/Semester 2/Software Engineering for Scientific Computing/Final Project/Unit_Test/Sample_Images/test_image.bmp\")\n",
     "flipped_image = interface.apply_transform(\"flip\", image, mode=\"horizontal\")\n",
     "interface.write_image(\"flipped_image.jpg\", flipped_image)\n",
     "\n",
     "# Crop\n",
-    "image = interface.read_image(\"input_image.jpg\")\n",
+    "image = interface.read_image(\"/home/karanvora/Documents/New York University/Classes/Semester 2/Software Engineering for Scientific Computing/Final Project/Unit_Test/Sample_Images/test_image.bmp\")\n",
     "cropped_image = interface.apply_transform(\"crop\", image, box=(100, 100, 300, 300))\n",
     "interface.write_image(\"cropped_image.jpg\", cropped_image)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in ./.venv/lib/python3.11/site-packages (1.24.3)\n",
+      "Requirement already satisfied: pillow in ./.venv/lib/python3.11/site-packages (9.5.0)\n",
+      "Collecting cairosvg\n",
+      "  Downloading CairoSVG-2.7.0-py3-none-any.whl (43 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.2/43.2 kB\u001b[0m \u001b[31m525.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting cairocffi (from cairosvg)\n",
+      "  Downloading cairocffi-1.5.1.tar.gz (86 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.9/86.9 kB\u001b[0m \u001b[31m307.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting cssselect2 (from cairosvg)\n",
+      "  Downloading cssselect2-0.7.0-py3-none-any.whl (15 kB)\n",
+      "Collecting defusedxml (from cairosvg)\n",
+      "  Using cached defusedxml-0.7.1-py2.py3-none-any.whl (25 kB)\n",
+      "Collecting tinycss2 (from cairosvg)\n",
+      "  Using cached tinycss2-1.2.1-py3-none-any.whl (21 kB)\n",
+      "Collecting cffi>=1.1.0 (from cairocffi->cairosvg)\n",
+      "  Using cached cffi-1.15.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (462 kB)\n",
+      "Collecting webencodings (from cssselect2->cairosvg)\n",
+      "  Using cached webencodings-0.5.1-py2.py3-none-any.whl (11 kB)\n",
+      "Collecting pycparser (from cffi>=1.1.0->cairocffi->cairosvg)\n",
+      "  Using cached pycparser-2.21-py2.py3-none-any.whl (118 kB)\n",
+      "Building wheels for collected packages: cairocffi\n",
+      "  Building wheel for cairocffi (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for cairocffi: filename=cairocffi-1.5.1-py3-none-any.whl size=90523 sha256=b72a1f696cefaeae28a546611bdd0ba82b44953882b1965d32a9002e54f77334\n",
+      "  Stored in directory: /home/karanvora/.cache/pip/wheels/64/c9/84/c2d0447ec3b9f919fe2d8792df12c21197b919acc02b9e22fb\n",
+      "Successfully built cairocffi\n",
+      "Installing collected packages: webencodings, tinycss2, pycparser, defusedxml, cssselect2, cffi, cairocffi, cairosvg\n",
+      "Successfully installed cairocffi-1.5.1 cairosvg-2.7.0 cffi-1.15.1 cssselect2-0.7.0 defusedxml-0.7.1 pycparser-2.21 tinycss2-1.2.1 webencodings-0.5.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install numpy pillow cairosvg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
